# ezweb

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ezweb/: __init__.py
src/ezweb/core/: app.py  page.py  script.py
src/ezweb/templates/: 404.html
